Bug 380437 - Save does not work when I only change layer name
Summary: Save does not work when I only change layer name
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: 3.1.4
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Halla Rempt
URL:
Keywords:
: 389562 394363 (view as bug list)
Depends on:
Blocks:
 
Reported: 2017-06-01 18:29 UTC by Long Leaf's Friends
Modified: 2019-05-03 11:50 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Long Leaf's Friends 2017-06-01 18:29:18 UTC
Both ctrl-s and menu File->Save don't work if no other changes has been applied to .ora document.
Comment 1 mvowada 2017-06-03 07:05:30 UTC
(This is on Ubuntu 14.04 with Krita 3.1.4 appimage). I think I can confirm this behaviour with *.kra files too, in my case it happens whenever I change the layer name without accessing the layer Property dialog (important).

Steps to reproduce:

- open an existing *.ora or *.kra file,
- change a layer name on the "Layers" docker just by double clicking on the name (important)
- save the file (either by doing "CTRL+S" or by going to menu "File > Save")
- close and reopen.

Actual results: the file has not been saved, the layer name has not been saved.
Expected results: save the file even after changing the layer name without accessing the Property dialog?
Comment 2 katearcher89 2017-07-03 23:59:58 UTC
I confirm this, happens on win7 too. 

Krita doesn't change the modified status of a file(* symbol in the header of the file/window) if only a layer name through the layer docker was changed and thus not giving an option to save the file since it thinks nothing have changed.
Comment 3 Neviril 2017-10-20 18:05:14 UTC
It might go slightly deeper than this. I noticed that not only these actions don't "dirty" an image, but they also are not undoable:

- Layer name (renaming by double clicking or F2 key)
From the right-click context menu on the layer boxes:
- Layer color 
- Isolate layer
- Show in timeline

Setting layer color and name with the Layer Properties dialog (F3 key) however does "dirty" the image and is an undoable action.
Comment 4 Halla Rempt 2018-05-17 09:23:32 UTC
*** Bug 394363 has been marked as a duplicate of this bug. ***
Comment 5 Scott Petrovic 2019-03-30 17:59:23 UTC
This was a recent bug that was introduced a week ago.

I am working on a patch to fix this...as well as add some functionality to the transform tool. The work is being done here... 

https://phabricator.kde.org/D18792
Comment 6 Scott Petrovic 2019-03-30 17:59:58 UTC
sorry...posted on wrong ticket :(
Comment 7 Halla Rempt 2019-05-03 11:26:39 UTC
*** Bug 389562 has been marked as a duplicate of this bug. ***
Comment 8 Halla Rempt 2019-05-03 11:27:46 UTC
Changing the layer name is not an undoable action and doesn't set the document to modified.
Comment 9 Halla Rempt 2019-05-03 11:50:25 UTC
Git commit 43f89ce8d9c13ee0c174737166ec3cec4eecff3e by Boudewijn Rempt.
Committed on 03/05/2019 at 11:50.
Pushed by rempt into branch 'master'.

Create an undo command for node renaming

This means that changing a node's name will now mark the document
modified so it can be saved, and it's possible to undo a node
rename.

M  +1    -0    libs/image/CMakeLists.txt
C  +11   -15   libs/image/commands/KisNodeRenameCommand.cpp [from: libs/image/commands/kis_node_compositeop_command.cpp - 055% similarity]
A  +40   -0    libs/image/commands/KisNodeRenameCommand.h     [License: GPL (v2+)]
M  +0    -2    libs/image/commands/kis_node_compositeop_command.cpp
M  +7    -0    libs/ui/kis_node_commands_adapter.cpp
M  +1    -0    libs/ui/kis_node_commands_adapter.h
M  +9    -0    libs/ui/kis_node_manager.cpp
M  +5    -0    libs/ui/kis_node_manager.h
M  +1    -1    libs/ui/kis_node_model.cpp

https://invent.kde.org/kde/krita/commit/43f89ce8d9c13ee0c174737166ec3cec4eecff3e