Create an undo command for node renaming

This means that changing a node's name will now mark the document
modified so it can be saved, and it's possible to undo a node
rename.

BUG:380437